2001-01-11  Bernd Schmidt  <bernds@redhat.co.uk>

	* config/mips/vxworks.h: Don't terminate comment before its end.

	* invoke.texi: Update -fvtable-thunks documentation.

	* loop.c (scan_loop): Disable copy propagation if we find a REG_LABEL
	note.

	Revert this patch:
	2000-12-18  David Edelsohn  <edelsohn@gnu.org>
	* rs6000.c (and64_operand): Use logical_u_operand.

	Mon Oct  4 16:56:11 1999  Richard Henderson  <rth@cygnus.com>
	* tree.c (build1): Set TREE_SIDE_EFFECTS for expressions that
	always have side-effects.

	Mon Oct  4 02:12:41 1999  Mark Mitchell  <mark@codesourcery.com>
	* tree.c (make_node): Set TREE_SIDE_EFFECTS for expressions that
	always have side-effects.

2001-01-01  Bernd Schmidt  <bernds@redhat.co.uk>

	* version.c: Bump.

	* loop.c (instrument_loop_bct): Set JUMP_LABEL on new jump.

	2000-12-27  Geoffrey Keating  <geoffk@redhat.com>
	* config/rs6000/rs6000.md (define_attr "length"): Correct
	calculation.

2001-01-01  Philipp Thomas <pthomas@suse.de>

	* configure.in: Make the help for --enable-nls make it
	clear that this is an experimental feature.
	* configure: Regenerate.
	* ABOUT-GCC-NLS: Explain why NLS support is buggy.

2000-12-29  Bernd Schmidt  <bernds@redhat.co.uk>

	* version.c: Bump.

	* combine.c (cant_combine_insn_p): Only restrict hard register
	combinations for SMALL_REGISTER_CLASSES machines.

	* config/sparc/sparc.c (pic_address_needs_scratch): LABEL_REFs are
	not valid pic operands.

	2000-12-26  Kazu Hirata  <kazu@hxi.com>
	* config/h8300/h8300.c (get_shift_alg): Fix a typo in the
	assembly code for 12-bit ASHIFTRT in HImode.

	2000-07-17  Kazu Hirata  <kazu@hxi.com>
	* h8300.md: Fix the format of mac.
	(movsi_h8300hs): Output a tab after stmac instead of a space.

	2000-10-07  Will Cohen  <wcohen@redhat.com>, Kazu Hirata  <kazu@hxi.com>
	* config/h8300/h8300.md: Remove the memory alternative and correct
	the insn lengths in the templates for sign extention and zero
	extention.
