@@ -1,5 +1,12 @@
 2001-01-11  Bernd Schmidt  <bernds@redhat.co.uk>
 
+	2001-01-09  Mark Mitchell  <mark@codesourcery.com>
+	Remove support for using UWIN as a host machine.
+	* configure.in: Issue an error message.
+	* configure: Regenerated.
+	* config.gcc: Remove xm_* UWIN configury.
+	* config/i386/xm-uwin.h: Remove.
+
 	* config/mips/vxworks.h: Don't terminate comment before its end.
 
 	* invoke.texi: Update -fvtable-thunks documentation.
